force-app/main/default/objects/WorkflowSettings__c/WorkflowSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Define a hierarchical custom setting (WorkflowSettings__c) and create a CheckBox field per Workflow to turn the trigger off/on.</description>
    <label>WorkflowSettings</label>
</CustomObject>