force-app/main/default/objects/WorkflowSettings__c/fields/ContactWorkflow__c.field-meta.xml
<CustomField>
    <fullName>ContactWorkflow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ContactWorkflow</label>
    <type>Checkbox</type>
</CustomField>