force-app/main/default/objects/WorkflowSettings__c/fields/IndividualEmailResultWorkflow__c.field-meta.xml
<CustomField>
    <fullName>IndividualEmailResultWorkflow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IndividualEmailResultWorkflow</label>
    <type>Checkbox</type>
</CustomField>