force-app/main/default/objects/WorkflowSettings__c/fields/LeadWorkflow__c.field-meta.xml
<CustomField>
    <fullName>LeadWorkflow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LeadWorkflow</label>
    <type>Checkbox</type>
</CustomField>