force-app/main/default/objects/WorkflowSettings__c/fields/OrderWorkflow__c.field-meta.xml
<CustomField>
    <fullName>OrderWorkflow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OrderWorkflow</label>
    <type>Checkbox</type>
</CustomField>