force-app/main/default/objects/WorkflowSettings__c/fields/PersonAccountWorkflow__c.field-meta.xml
<CustomField>
    <fullName>PersonAccountWorkflow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PersonAccountWorkflow</label>
    <type>Checkbox</type>
</CustomField>