force-app/main/default/objects/WorkflowSettings__c/fields/VoucherWorkflow__c.field-meta.xml
<CustomField>
    <fullName>VoucherWorkflow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>VoucherWorkflow</label>
    <type>Checkbox</type>
</CustomField>